# mini-MLflow

./: .gitignore  LICENSE  MANIFEST.in  PROJECT_PLAN.md  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
mini_mlflow/: __init__.py  run.py  storage.py  tracker.py
tests/: __init__.py  test_run.py  test_storage.py  test_tracker.py  test_versioning.py
